Fix small spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -86,3 +86,12 @@
 .modal-dialog {
   max-width: 900px;
 }
+
+.filterTools h2 {
+    margin-top: 1em;
+}
+
+
+.filterTools h3 {
+    margin-top: .5em;
+}
